[package]
name = "rustls-native-certs"
version = "0.8.0"
edition = "2021"
rust-version = "1.60"
license = "Apache-2.0 OR ISC OR MIT"
readme = "README.md"
description = "rustls-native-certs allows rustls to use the platform native certificate store"
homepage = "https://github.com/rustls/rustls-native-certs"
repository = "https://github.com/rustls/rustls-native-certs"
categories = ["network-programming", "cryptography"]

[dependencies]
rustls-pemfile = "2"
pki-types = { package = "rustls-pki-types", version = "1" }

[dev-dependencies]
ring = "0.17"
rustls = { git = "https://github.com/wasix-org/rustls", branch = "v0.22.2" }
rustls-webpki = "0.101"
serial_test = "2"
untrusted = "0.7.0" # stick to the version ring depends on for now
webpki-roots = { git = "https://github.com/wasix-org/webpki-roots.git", branch = "v0.25.2" }
x509-parser = "0.15"

[target.'cfg(target_os = "wasi")'.dependencies]
libc = { version = "0.2.169", git = "https://github.com/mvniekerk/libc.git", branch = "wasix-0.2.169" }

[patch.crates-io]
libc = { version = "0.2.169", git = "https://github.com/mvniekerk/libc.git", branch = "wasix-0.2.169" }


[target.'cfg(windows)'.dependencies]
schannel = "0.1"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
openssl-probe = "0.1.2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"
